<resources>
    <string name="app_name">Contacts</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="dark">D</string>
    <string name="no_records_found">No Recound Found</string>
    <string name="api_contact">Api Contacts</string>
    <string name="phone_contact">Phone Contacts</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="error_msg_unknown">Error Message</string>
    <string name="please_wait">Please wait...</string>
    <string name="error_msg_timeout">Timed Out</string>
    <string name="add_contact">Add Contact</string>
</resources>