<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/contact_shimmer" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/retryLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="@dimen/_50sdp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/rety_selector"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_refresh"
                android:tintMode="src_in"
                app:tint="@color/placeholder_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.task.contacts.widgets.MediumTextView
                    android:id="@+id/errorTxt"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_internet_connection"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.task.contacts.widgets.MediumTextView
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_to_reload"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>