<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.BuyerHomeFragment">

    <RelativeLayout
        android:id="@+id/auctionTopLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.task.contacts.widgets.MediumTextView
        android:id="@+id/contactTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:gravity="center"
        android:minHeight="@dimen/_35sdp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp" />

    </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_search"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auctionTopLayout"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/futura_medium"
                android:hint="@string/search_contacts"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:singleLine="true"
                android:textSize="15sp"
                android:imeOptions="actionSearch"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_bottom_nav_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_search"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />


            <View
                android:id="@+id/view_split"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/switch_mode"
                app:layout_constraintEnd_toStartOf="@+id/switch_mode"
                app:layout_constraintStart_toEndOf="@+id/iv_search"/>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/futura_medium"
                android:text="@string/dark"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/TabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_search"
            app:tabIndicatorColor="@color/app_color"
            app:tabIndicatorHeight="@dimen/_2sdp"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/app_color"
            app:tabTextAppearance="@style/CustomTextAppearanceTab"
            app:tabTextColor="@color/black"
            app:tabUnboundedRipple="true" />




            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/auctionLoadingShimmer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TabLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/contact_shimmer" />

                    <include layout="@layout/contact_shimmer" />

                    <include layout="@layout/contact_shimmer" />

                    <include layout="@layout/contact_shimmer" />

                    <include layout="@layout/contact_shimmer" />

                    <include layout="@layout/contact_shimmer" />


                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/auctionRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TabLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.task.contacts.widgets.MediumTextView
                android:id="@+id/noRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_8sdp"
                android:text="@string/no_records_found"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/phoneRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/checkout"
            app:layout_constraintTop_toBottomOf="@+id/TabLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.task.contacts.widgets.MediumTextView
            android:id="@+id/checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/app_color"
            android:gravity="center"
            android:minHeight="@dimen/_40sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/add_contact"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />







    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>